# SimpleAmqpClient

./: .astyle  .gitattributes  .gitignore  .travis.yml  AmqpResponseLibraryException.cpp  AmqpResponseLibraryException.h  AmqpResponseServerException.cpp  AmqpResponseServerException.h  BUILDING.md  BasicMessage.cpp  BasicMessage.h  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  ChangeLog.md  Channel.cpp  Channel.h  Connection.cpp  Connection.h  Doxyfile.in  HACKING.md  LICENSE-MIT  LICENSE-MPL  Message.cpp  Message.h  README  README.md  SimpleAmqpClient.h  SimplePublisher.cpp  SimplePublisher.h  SimpleRpcClient.cpp  SimpleRpcClient.h  SimpleRpcServer.cpp  SimpleRpcServer.h  SimpleSubscriber.cpp  SimpleSubscriber.h  SimpleTwoWayChannel.cpp  SimpleTwoWayChannel.h  Util.cpp  Util.h  (+4 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
Modules/: FindRabbitmqc.cmake  UseDoxygen.cmake  ucm.cmake
cmake/: SimpleAmqpClient-config.cmake.in  SimpleAmqpClientConfig.cmake.in  dev-mode.cmake  install-config.cmake.in  install-rules.cmake  variables.cmake
examples/: SimplePublisher.cpp  SimplePublisher.h  SimpleRpcClient.cpp  SimpleRpcClient.h  SimpleRpcServer.cpp  SimpleRpcServer.h  SimpleSubscriber.cpp  SimpleSubscriber.h  SimpleTwoWayChannel.cpp  SimpleTwoWayChannel.h  basic_return_test.cpp  consume_with_timeout.cpp  envelope_test.cpp  simple_connect.cpp
firmware/: AmqpException.cpp  AmqpLibraryException.cpp  AmqpLibraryException.h  AmqpResponseLibraryException.cpp  AmqpResponseLibraryException.h  BadUriException.h  ConnectionClosedException.h  Envelope.cpp  Envelope.h  TableImpl.cpp  TableImpl.h  Version.h
firmware/examples/: SimplePublisher.cpp  SimpleRpcServer.cpp  SimpleRpcServer.h
firmware/test/: test_ack.cpp  test_channels.cpp  test_exchange.cpp  test_nack.cpp  test_queue.cpp
include/SimpleAmqpClient/: AmqpException.h  AmqpLibraryException.h  AmqpResponseLibraryException.h  BasicMessage.h  Channel.h  ChannelImpl.h  ConsumerTagNotFoundException.h  SimpleAmqpClient.h  TableImpl.h  Util.h
source/: AmqpLibraryException.cpp  Channel.cpp  ChannelImpl.cpp
src/: AmqpException.cpp  AmqpLibraryException.cpp  AmqpResponseLibraryException.cpp  AmqpResponseServerException.cpp  BasicMessage.cpp  Channel.cpp  ChannelImpl.cpp  Envelope.cpp  MessageReturnedException.cpp  SimpleAmqpClient.h  SimplePublisher.cpp  SimpleRpcServer.cpp  SimpleSubscriber.cpp  Table.cpp  TableImpl.cpp  Util.cpp
src/SimpleAmqpClient/: AmqpException.h  AmqpLibraryException.h  AmqpResponseLibraryException.h  AmqpResponseServerException.h  BadUriException.h  BasicMessage.h  Bytes.h  Channel.h  ChannelImpl.h  ConnectionClosedException.h  ConsumerCancelledException.h  ConsumerTagNotFoundException.h  Envelope.h  MessageRejectedException.h  MessageReturnedException.h  SimpleAmqpClient.h  SimplePublisher.h  SimpleRpcClient.h  SimpleTwoWayChannel.h  Table.h  TableImpl.h  Util.h  Version.h
test/: CMakeLists.txt
test/source/: connected_test.h  test_connect.cpp  test_get.cpp  test_message.cpp  test_table.cpp
testing/: CMakeLists.txt  connected_test.h  test_ack.cpp  test_channels.cpp  test_connect.cpp  test_consume.cpp  test_exchange.cpp  test_get.cpp  test_message.cpp  test_nack.cpp  test_publish.cpp  test_queue.cpp  test_table.cpp
